--- a/static/css/posts/board_scroll.scss
+++ b/static/css/posts/board_scroll.scss
@@ -1,4 +1,4 @@
-#board {
+#board__scroll {
     position: relative;
     display: flex;
     width: 80%;
@@ -7,7 +7,7 @@
 
 }
 
-#board__filter {
+#board__scroll__filter {
     position: fixed;
     width: 400px;
     height: 800px;
@@ -15,14 +15,46 @@
     overflow-y: auto;
 }
 
-#board__content {
+#board__scroll__content {
     width: 65%;
     margin-left: 450px;
 }
 
 /*  */
 
-#board__filter__title{
+#board__scroll__content__search{
+    width: 80%; 
+    height: 100px; 
+    display: flex; 
+    align-items: center; 
+    background-color: #225596; 
+    margin: 0 auto;
+    margin-bottom: 50px;
+    padding: 5%;
+    color: white;
+    border-radius: 0.4rem;
+    
+}
+
+#board__scroll__content__search__result{
+}
+#board__scroll__content__search__close{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 0 0 auto;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+#board__scroll__content__search__close__icon{
+    font-size: 1.5rem;
+}
+
+/*  */
+
+#board__scroll__filter__title{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,7 +66,7 @@
 
 /*  */
 
-#board__filter__search {
+#board__scroll__filter__search {
     display: flex;
     align-items: center;
     padding: 10px;
@@ -47,7 +79,7 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-#board__filter__search__input {
+#board__scroll__filter__search__input {
     width: 80%;
     height: 80%;
     color: #22304f;
@@ -55,13 +87,13 @@
     background-color: #e9ecf2;
 }
 
-#board__filter__search__icon {
+#board__scroll__filter__search__icon {
     margin: 0 0 0 auto;
 }
 
 /*  */
 
-.board__filter__checkbox{
+.board__scroll__filter__checkbox{
     width: 80%;
     margin: 0 auto;
     margin-top: 50px;
@@ -69,34 +101,34 @@
     /* background-color: lightpink; */
 }
 
-#board__filter__checkbox__title{
+#board__scroll__filter__checkbox__title{
     display: flex;
     width: 100%;
     margin: 20px auto;
     align-items: center;
 }
 
-#board__filter__checkbox__title__icon{
+#board__scroll__filter__checkbox__title__icon{
     color: #44576F;
     margin: 0 0 0 auto;
 }
 
-.board__filter__checkbox__item{
+.board__scroll__filter__checkbox__item{
     display: flex;
     align-items: center;
     width: 100%;
     margin: 20px 0;
 }
 
-.board__filter__checkbox__item__checkbox{
+.board__scroll__filter__checkbox__item__checkbox{
 
 }
 
-.board__filter__checkbox__item__text{
+.board__scroll__filter__checkbox__item__text{
     margin: 0 10px;
 }
 
-.board__filter__checkbox__item__amount{
+.board__scroll__filter__checkbox__item__amount{
     margin: 0 0 0 auto;
     padding: 5px;
     font-size: 0.7rem;
@@ -106,7 +138,7 @@
     box-shadow:  0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-.board__filter__checkbox__item__amount__checked{
+.board__scroll__filter__checkbox__item__amount__checked{
     color: #4678F8;
     background-color: #E5EEFB;
 }
@@ -119,7 +151,7 @@
 
 
 
-.board__content__item{
+.board__scroll__content__item{
     display: flex;
     width: 90%;
     height: 200px;
@@ -133,7 +165,7 @@
 
 /*  */
 
-.board__content__item__head{
+.board__scroll__content__item__head{
     display: flex;
     align-items: center;
     width: 20%;
@@ -141,7 +173,7 @@
     /* background-color: lightpink; */
 }
 
-.board__content__item__head__img{
+.board__scroll__content__item__head__img{
     width: 100%;
     height: 70%;
 }
@@ -149,7 +181,7 @@
 /*  */
 
 
-.board__content__item__body{
+.board__scroll__content__item__body{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -159,27 +191,27 @@
     color: #22304f;
 }
 
-.board__content__item__body__company{
+.board__scroll__content__item__body__company{
     font-size: 1.25rem;
     font-weight: 900;
     height: 20%;
 }
 
-.board__content__item__body__position{
+.board__scroll__content__item__body__position{
     height: 20%;
 }
 
-.board__content__item__body__location{
+.board__scroll__content__item__body__location{
     color: #7f7f89;
     height: 20%;
 }
 
-.board__content__item__body__filter{
+.board__scroll__content__item__body__filter{
     display: flex;
     height: 20%;
 }
 
-.board__content__item__body__filter__item{
+.board__scroll__content__item__body__filter__item{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -192,14 +224,14 @@
 }
 
 /*  */
-.board__content__item__tail{
+.board__scroll__content__item__tail{
     display: flex;
     flex-direction: column;
     width: 25%;
     height: 100%;
 }
 
-.board__content__item__tail__salary{
+.board__scroll__content__item__tail__salary{
     display: flex;
     justify-content: center;
     margin-top: 35%;
@@ -208,7 +240,7 @@
     font-weight: 900;
 }
 
-.board__content__item__tail__deadline{
+.board__scroll__content__item__tail__deadline{
     margin: auto 0 0 auto;
     padding: 10%;
     color: #7f7f89;
